--- a/Web/assets/css/holerite.css
+++ b/Web/assets/css/holerite.css
@@ -63,7 +63,7 @@ button {
     border-radius: 30px;
     width: 300px;
     font-family: 'Helvetica Neue', sans-serif;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 button:hover {
@@ -87,5 +87,12 @@ h1 {
     margin: 0 auto;
 }
 .nome {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
+}
+.select-mes{
+    margin-bottom: 20px;
+    font-size:larger ;
+}
+.gerar-btn{
+    width: 200px;
 }
